--- a/NFV-BMS/package.json
+++ b/NFV-BMS/package.json
@@ -1,32 +1,34 @@
 {
-  "name": "5gbench",
+  "name": "NFV-BMS",
   "version": "1.0.0",
-  "description": "A benchmark tool for Open5GCore-OpenStack-ELKStack testbed integration",
-  "main": "index.js",
-  "dependencies": {
-    "chalk": "^2.3.2",
-    "commander": "^2.15.1",
-    "elasticsearch": "^14.2.2",
-    "fs": "0.0.1-security",
-    "inquirer": "^5.2.0",
-    "moment": "^2.22.0"
+  "main": "server/server.js",
+  "engines": {
+    "node": ">=4"
   },
-  "devDependencies": {},
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "lint": "eslint .",
+    "start": "node .",
+    "posttest": "npm run lint"
+  },
+  "dependencies": {
+    "compression": "^1.0.3",
+    "cors": "^2.5.2",
+    "helmet": "^3.10.0",
+    "loopback": "^3.19.0",
+    "loopback-boot": "^2.6.5",
+    "loopback-component-explorer": "^6.0.0",
+    "loopback-connector-mysql": "^5.3.0",
+    "serve-favicon": "^2.0.1",
+    "strong-error-handler": "^3.0.0"
+  },
+  "devDependencies": {
+    "eslint": "^3.17.1",
+    "eslint-config-loopback": "^8.0.0"
   },
   "repository": {
-    "type": "git",
-    "url": "https://git.cs.kau.se/michkhan/5gbench.git"
+    "type": "",
+    "url": ""
   },
-  "keywords": [
-    "open5gcore",
-    "openstack",
-    "elasticsearch",
-    "elk-stack",
-    "collectd",
-    "benchmarking"
-  ],
-  "author": "Michel Gokan",
-  "license": "CC-BY-4.0"
+  "license": "UNLICENSED",
+  "description": "NFV-BMS"
 }
