--- a/NFV-MON/Server/package.json
+++ b/NFV-MON/Server/package.json
@@ -7,15 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
-    "compression": "^1.0.3",
-    "cors": "^2.5.2",
-    "helmet": "^3.10.0",
-    "loopback": "^3.19.0",
-    "loopback-boot": "^2.6.5",
-    "loopback-component-explorer": "^6.0.0",
-    "loopback-connector-mysql": "^5.3.0",
-    "serve-favicon": "^2.0.1",
-    "strong-error-handler": "^3.0.0"
+    "server": "latest"
   },
   "author": "Michel Gokan Khan",
   "license": "MIT"
