--- a/NFV-VMS/server/component-config.json
+++ b/NFV-VMS/server/component-config.json
@@ -1,7 +1,12 @@
 {
   "loopback-component-explorer": {
     "mountPath": "/explorer",
-    "generateOperationScopedModels": true
+    "generateOperationScopedModels": true,
+    "uiDirs": "server/explorer",
+    "apiInfo": {
+      "title": "NFV-Inspector: NFV-BMS Component",
+      "description": "This is the API Explorer for NFV-BMS service"
+    }
   },
   "nfv-inspector-vms-kubernetes-plugin": {
     "useEnvVars": true
