--- a/NFV-BMS/package.json
+++ b/NFV-BMS/package.json
@@ -20,6 +20,7 @@
     "loopback-boot": "^2.6.5",
     "loopback-component-explorer": "^6.0.0",
     "loopback-connector-mysql": "^5.3.0",
+    "nfv-inspector-bms-hss-fe-plugin": "git+https://github.com/michelgokan/NFV-Inspector-BMS-HSS-FE-Plugin.git",
     "serve-favicon": "^2.0.1",
     "strong-error-handler": "^3.0.0"
   },
@@ -32,5 +33,8 @@
     "url": ""
   },
   "license": "UNLICENSED",
-  "description": "NFV-BMS"
+  "description": "NFV-BMS",
+  "officialPlugins": {
+    "git+https://github.com/michelgokan/NFV-Inspector-BMS-HSS-FE-Plugin.git": "nfv-inspector-bms-hss-fe-plugin"
+  }
 }
