--- a/NFV-BMS/server/component-config.json
+++ b/NFV-BMS/server/component-config.json
@@ -7,5 +7,8 @@
       "title": "NFV-Inspector: NFV-BMS Component",
       "description": "This is the API Explorer for NFV-BMS service"
     }
+  },
+  "nfv-inspector-bms-hss-fe-plugin": {
+    "useEnvVars": true
   }
 }
