Adding nfv-inspector-vms-openstack-plugin

--- a/NFV-VMS/server/component-config.json
+++ b/NFV-VMS/server/component-config.json
@@ -10,5 +10,8 @@
   },
   "nfv-inspector-vms-kubernetes-plugin": {
     "useEnvVars": true
+  },
+  "nfv-inspector-vms-openstack-plugin": {
+    "useEnvVars": true
   }
 }
