Making NFV-BMS work again...

--- a/NFV-BMS/server/model-config.json
+++ b/NFV-BMS/server/model-config.json
@@ -179,8 +179,7 @@
     "dataSource": "mysql",
     "public": true
   },
-  "PersistedModelExtended": {
-    "dataSource": "mysql",
-    "public": true
+  "nfv_bms": {
+    "dataSource": null
   }
 }
