--- a/NFV-VMS/package.json
+++ b/NFV-VMS/package.json
@@ -14,10 +14,13 @@
     "compression": "^1.0.3",
     "cors": "^2.5.2",
     "helmet": "^3.10.0",
+    "http": "0.0.0",
+    "https": "^1.0.0",
     "loopback": "^3.19.0",
     "loopback-boot": "^2.6.5",
     "loopback-component-explorer": "^6.0.0",
     "loopback-connector-mysql": "^5.3.1",
+    "needle": "^2.2.4",
     "nfv-inspector-vms-kubernetes-plugin": "git+https://github.com/michelgokan/NFV-Inspector-VMS-Kubernetes-Plugin.git",
     "nfv-inspector-vms-openstack-plugin": "git+https://github.com/michelgokan/NFV-Inspector-VMS-OpenStack-Plugin.git",
     "serve-favicon": "^2.0.1",
