--- a/NFV-BMS/common/models/traffic-demand-configuration.json
+++ b/NFV-BMS/common/models/traffic-demand-configuration.json
@@ -11,7 +11,11 @@
       "type": "string",
       "required": true
     },
-    "total_calls": {
+    "duration": {
+      "type": "number",
+      "required": true
+    },
+    "rate": {
       "type": "number",
       "required": true
     },
