--- a/NFV-MON/Server/package.json
+++ b/NFV-MON/Server/package.json
@@ -17,6 +17,7 @@
     "loopback": "^3.19.0",
     "loopback-boot": "^2.6.5",
     "loopback-component-explorer": "^6.0.0",
+    "needle": "^2.2.4",
     "nfv-inspector-mon-influxdb-plugin": "git+https://github.com/michelgokan/NFV-Inspector-MON-InfluxDB-Plugin.git",
     "serve-favicon": "^2.0.1",
     "strong-error-handler": "^3.0.0"
