--- a/NFV-DASHBOARD/package.json
+++ b/NFV-DASHBOARD/package.json
@@ -9,6 +9,7 @@
     "@sailshq/lodash": "^3.10.3",
     "@sailshq/socket.io-redis": "^5.2.0",
     "grunt": "^1.0.3",
+    "json-pretty-html": "^1.2.0",
     "node-fetch": "^2.3.0",
     "request": "^2.88.0",
     "sails": "^1.1.0",
