--- a/NFV-VMS/package.json
+++ b/NFV-VMS/package.json
@@ -20,6 +20,7 @@
     "loopback-boot": "^2.6.5",
     "loopback-component-explorer": "^6.0.0",
     "loopback-connector-mysql": "^5.3.1",
+    "mathjs": "^5.4.2",
     "needle": "^2.2.4",
     "nfv-inspector-vms-kubernetes-plugin": "git+https://github.com/michelgokan/NFV-Inspector-VMS-Kubernetes-Plugin.git",
     "nfv-inspector-vms-openstack-plugin": "git+https://github.com/michelgokan/NFV-Inspector-VMS-OpenStack-Plugin.git",
