Adding service chain feature to NFV-BMS as well as fixing some problems in its models

--- a/NFV-BMS/server/model-config.json
+++ b/NFV-BMS/server/model-config.json
@@ -185,5 +185,9 @@
   "configuration": {
     "dataSource": "db",
     "public": true
+  },
+  "system_function_chain": {
+    "dataSource": "mysql",
+    "public": true
   }
 }
