--- a/NFV-BMS/common/models/node-properties-configuration.json
+++ b/NFV-BMS/common/models/node-properties-configuration.json
@@ -22,7 +22,7 @@
   },
   "validations": [],
   "relations": {
-    "nodePropertiesConfigurationRelation": {
+    "node_type": {
       "type": "belongsTo",
       "model": "node_type",
       "foreignKey": "node_type_id"
