Fixed a problem with duplicated relation names in node-placement-configuration in NFV-BMS

--- a/NFV-BMS/common/models/node-placement-configuration-node-place.json
+++ b/NFV-BMS/common/models/node-placement-configuration-node-place.json
@@ -47,7 +47,7 @@
       "foreignKey": "node_id",
       "required": true
     },
-    "node": {
+    "parent_node": {
       "type": "belongsTo",
       "model": "node",
       "foreignKey": "parent_node_id"
