Size order has been added to resource-allocation-configuration in NFV-BMS

--- a/NFV-BMS/common/models/resource-allocation-configuration.json
+++ b/NFV-BMS/common/models/resource-allocation-configuration.json
@@ -18,6 +18,13 @@
     "name": {
       "type": "string",
       "required": true
+    },
+    "size_order": {
+      "type": "number",
+      "required": true,
+      "index": {
+        "unique": true
+      }
     }
   },
   "validations": [],
