Changed limit_value and size_value data types to bigint (in Kubernetes plugin the unit of measurement is bytes, which makes this number a huge one)

--- a/NFV-BMS/common/models/resource-allocation-configuration-value.json
+++ b/NFV-BMS/common/models/resource-allocation-configuration-value.json
@@ -23,10 +23,12 @@
   "properties": {
     "size_value": {
       "type": "number",
-      "required": true
+      "required": true,
+      "dataType": "bigint"
     },
     "limit_value": {
-      "type": "number"
+      "type": "number",
+      "dataType": "bigint"
     }
   },
   "validations": [],
