Added node_placement_affinity_rule model in migration script (NFV-BMS). Also added deployemnt_id to node_placement_configuration. Also linked node_placement_affinity_rule to node_placement_configuration instead of deployment.

--- a/NFV-BMS/common/models/node-placement-configuration.json
+++ b/NFV-BMS/common/models/node-placement-configuration.json
@@ -5,6 +5,15 @@
   "options": {
     "validateUpsert": true
   },
+  "foreignKeys": {
+    "deployment_id": {
+      "name": "nodePlacementDeploymentFK",
+      "foreignKey": "deployment_id",
+      "entityKey": "id",
+      "entity": "deployment",
+      "required": true
+    }
+  },
   "properties": {
     "name": {
       "type": "string",
@@ -12,7 +21,14 @@
     }
   },
   "validations": [],
-  "relations": {},
+  "relations": {
+    "deployment": {
+      "type": "belongsTo",
+      "model": "deployment",
+      "foreignKey": "deployment_id",
+      "required": true
+    }
+  },
   "acls": [],
   "methods": {}
 }
