Adding isForTest attribute to node_placement_configuration in order to be able input test placements (for verification)

--- a/NFV-BMS/common/models/node-placement-configuration.json
+++ b/NFV-BMS/common/models/node-placement-configuration.json
@@ -18,6 +18,11 @@
     "name": {
       "type": "string",
       "required": true
+    },
+    "isForTest": {
+      "type": "boolean",
+      "required": false,
+      "default": false
     }
   },
   "validations": [],
