--- a/NFV-BMS/server/model-config.json
+++ b/NFV-BMS/server/model-config.json
@@ -193,5 +193,9 @@
   "node_placement_affinity_rule": {
     "dataSource": "mysql",
     "public": true
+  },
+  "deployment_node": {
+    "dataSource": "mysql",
+    "public": true
   }
 }
