--- a/NFV-BMS/common/models/experiment-node-configuration.json
+++ b/NFV-BMS/common/models/experiment-node-configuration.json
@@ -1,11 +1,11 @@
 {
   "name": "experiment_node_configuration",
-  "plural": "experiments_node_configurations",
+  "plural": "experiment_nodes_configurations",
   "base": "PersistedModel",
   "idInjection": true,
   "indexes": {
     "UNIQUE_INDEX": {
-      "columns": "`experiment_id`,`node_id`,`node_properties_configuration_id`,`resource_allocation_configuration_id`,`vnf_properties_configuration_id`",
+      "columns": "`experiment_id`,`node_id`,`node_properties_configuration_id`,`resource_allocation_configuration_id`",
       "kind": "unique"
     }
   },
@@ -36,12 +36,6 @@
       "foreignKey": "resource_allocation_configuration_id",
       "entityKey": "id",
       "entity": "resource_allocation_configuration"
-    },
-    "vnf_properties_configuration_id": {
-      "name": "experNodeConfVnfPropConfIdForeignKey",
-      "foreignKey": "vnf_properties_configuration_id",
-      "entityKey": "id",
-      "entity": "vnf_properties_configuration"
     }
   },
   "properties": {},
@@ -66,11 +60,6 @@
       "type": "belongsTo",
       "model": "resource_allocation_configuration",
       "foreignKey": "resource_allocation_configuration_id"
-    },
-    "vnf_properties_configuration": {
-      "type": "belongsTo",
-      "model": "vnf_properties_configuration",
-      "foreignKey": "vnf_properties_configuration_id"
     }
   },
   "acls": [],
