--- a/NFV-BMS/common/models/vnf-properties-configuration.json
+++ b/NFV-BMS/common/models/vnf-properties-configuration.json
@@ -7,6 +7,12 @@
     "validateUpsert": true
   },
   "foreignKeys": {
+    "vnf_properties_configuration_set_id": {
+      "name": "vnfPropConfVnfPropSetIdForeignKey",
+      "foreignKey": "vnf_properties_configuration_set_id",
+      "entityKey": "id",
+      "entity": "vnf_properties_configuration_set"
+    },
     "vnf_id": {
       "name": "vnfPropConfVnfIdForeignKey",
       "foreignKey": "vnf_id",
@@ -22,6 +28,11 @@
   },
   "validations": [],
   "relations": {
+    "vnf_properties_configuration_set": {
+      "type": "belongsTo",
+      "model": "vnf_properties_configuration_set",
+      "foreignKey": "vnf_properties_configuration_set_id"
+    },
     "vnf": {
       "type": "belongsTo",
       "model": "vnf",
