--- a/NFV-BMS/common/models/node-placement-configuration-node-place.json
+++ b/NFV-BMS/common/models/node-placement-configuration-node-place.json
@@ -26,6 +26,11 @@
       "foreignKey": "parent_node_id",
       "entityKey": "id",
       "entity": "node"
+    },
+    "is_virtual": {
+      "type": "boolean",
+      "required": false,
+      "default": false
     }
   },
   "properties": {
